--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,24 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/platforms.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/levels/level_1.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/levels/", "res://assets/", "res://assets/sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/player.tscn", "res://scenes/platform.tscn", "res://scenes/coin.tscn", "res://scenes/killzone.tscn", "res://scenes/slime.tscn", "res://scenes/ui.tscn")
-current_scene="res://scenes/game.tscn"
-center_split_offset=-252
+open_scenes=PackedStringArray("res://scenes/levels/level_1.tscn", "res://scenes/player.tscn", "res://scenes/platform.tscn", "res://scenes/coin.tscn", "res://scenes/killzone.tscn", "res://scenes/slime.tscn", "res://scenes/ui.tscn", "res://scenes/next_level.tscn", "res://scenes/levels/level_2.tscn")
+current_scene="res://scenes/levels/level_2.tscn"
+center_split_offset=-500
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/UI.gd"]
+open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/NextLevel.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/UI.gd"]
 selected_script="res://scripts/game_manager.gd"
 open_help=[]
 script_split_offset=70
