--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/menu.gd", "res://scripts/NextLevel.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/UI.gd"]
-selected_script="res://scripts/menu.gd"
+selected_script="res://scripts/game_manager.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
